fixed issue with cropping ui displaying wrong image size when closed and then re-opened

--- a/app/assets/stylesheets/tenon/ui/asset-cropping.css.scss
+++ b/app/assets/stylesheets/tenon/ui/asset-cropping.css.scss
@@ -6,17 +6,9 @@
     top: 20px;
     left: 50%;
     z-index: 1040;
-    max-width: 100vw;
-    max-height: 100vh;
+    max-width: 90vw;
+    max-height: 90vh;
     background-color: $tn-light-grey;
-
-    @media screen and (orientation: portrait) {
-      max-width: 95vw;
-    }
-
-    @media screen and (orientation: landscape) {
-      max-height: 95vh;
-    }
 
     .image-holder {
       padding: 20px;
@@ -39,18 +31,12 @@
     }
 
     .edit_asset {
+      @include clearfix;
       margin: 0;
       padding: 0 20px 20px;
-    }
+      background-color: $tn-light-grey;
+   }
 
-    .jcrop-keymgr {
-      display: none;
-    }
-
-    img {
-      max-width: 80vw;
-      max-height: 80vh;
-    }
   }
 }
 
